[feat] 게시판 수정